fix: minor bug fixes